pgadmin/ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  annotations:
    nginx.org/redirect-to-https: True
spec:
  tls:
  - hosts:
    - pgadmin.example.com
    secretName: tls-pgadmin
  rules:
  - host: pgadmin.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pgadmin4-http
          servicePort: 5050
