pgadmin/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - pgadmin.example.com
    secretName: pgadmin.example.com-tls
  rules:
  - host: pgadmin.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pgadmin4-http
          servicePort: 5050
